syntax = "proto3";

package io.aggregator.action;

import "kalix/annotations.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/any.proto";
import "io/aggregator/entity/minute_entity.proto";

option java_outer_classname = "MinuteToHourService";

service MinuteToHour {
  option (kalix.codegen) = {
    action: {}
  };

  rpc OnMinuteActivated(entity.MinuteActivated) returns (google.protobuf.Empty) {
    option (kalix.method).eventing.in = {
      event_sourced_entity: "minute"
    };
  }

  rpc OnMinuteAggregated(entity.MinuteAggregated) returns (google.protobuf.Empty) {
    option (kalix.method).eventing.in = {
      event_sourced_entity: "minute"
    };
  }

  rpc IgnoreOtherEvents(google.protobuf.Any) returns (google.protobuf.Empty) {
    option (kalix.method).eventing.in = {
      event_sourced_entity: "minute"
    };
  }
}
